--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 
 <body>
   <header class="page-header">
-    
+
     <div class="container container--flex">
-      <a href="./index.html" class="header-logo header-logo--style "> <span class="header-logo--color">Web</span>Studio</a>
+      <a href="./index.html" class="header-logo header-logo--style "> <span
+          class="header-logo--color">Web</span>Studio</a>
       <nav class="navigation">
         <ul class="site-navigation-list">
           <li class="site-navigation-list__item">
-            <a href="./index.html" class="site-navigation-list__item-link site-navigation-list__item-link--current">Студия</a>
+            <a href="./index.html"
+              class="site-navigation-list__item-link site-navigation-list__item-link--current">Студия</a>
           </li>
           <li class="site-navigation-list__item">
             <a href="./portfolio.html" class="site-navigation-list__item-link">Портфолио</a>
@@ -45,24 +47,19 @@
             </svg>+38 096 111 11 11</a>
         </li>
       </ul>
+
+      <button type="button" class="menu__open">
+        <svg width="40px" height="40px" aria-label="Открытие мобильного меню">
+          <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
     </div>
-    <button type="button" class="menu__open">
-      <svg width="40px" height="40px" aria-label="Открытие мобильного меню">
-        <use
-          class="icon__menu"
-          href="./images/icons.svg#icon-menu"
-        ></use>
-      </svg>
-    </button>
-  </div>
+    </div>
     <div class="container__mob">
       <div class="menu__container is-hidden">
         <button type="button" class="menu__close">
           <svg width="40px" height="40px" aria-label="Закрытие мобильного меню">
-            <use
-              class="icon__close"
-              href="./images/icons.svg#icon-close"
-            ></use>
+            <use class="icon__close" href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
 
@@ -72,9 +69,7 @@
               <a href="./index.html" class="mobile__menu__link">Студия</a>
             </li>
             <li class="mobile__menu__item">
-              <a href="./portfolio.html" class="mobile__menu__link mobile__menu__link--active"
-                >Портфолио</a
-              >
+              <a href="./portfolio.html" class="mobile__menu__link mobile__menu__link--active">Портфолио</a>
             </li>
             <li class="mobile__menu__item">
               <a href="" class="mobile__menu__link">Контакты</a>
@@ -243,28 +238,28 @@
             <ul class="actions">
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons" width="20" height="20">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -280,28 +275,28 @@
             <ul class="actions">
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -317,28 +312,28 @@
             <ul class="actions">
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -354,28 +349,28 @@
             <ul class="actions">
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="actions__li">
                 <a href="#" class="actions__icons">
-                  <svg  width="20" height="20">
+                  <svg width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -456,28 +451,28 @@
           <ul class="actions-footer">
             <li>
               <a href="#" class="actions-footer__icons">
-                <svg  width="20" height="20">
+                <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#" class="actions-footer__icons">
-                <svg  width="20" height="20">
+                <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#" class="actions-footer__icons">
-                <svg  width="20" height="20">
+                <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#" class="actions-footer__icons">
-                <svg  width="20" height="20">
+                <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -486,25 +481,22 @@
         </section>
         <form action="#">
           <b class="title-b">Подпишитесь на
-              рассылку</b>
+            рассылку</b>
           <div class="form-footer-box">
-              <label for="user-email"></label>
-              <input class="btn-footer-input" type="email"
-                  name="user-email" id="user-email" placeholder="E-mail"
-                  required>
-              <button type="submit"
-                  class="form-btn-footer form__label--touch-transform">Подписаться
-                  <svg class="form__icon-footer" width="24" height="24">
-                      <use
-                          href="./images/icons.svg#icon-airplane">
-                      </use>
-                  </svg>
-              </button>
+            <label for="user-email"></label>
+            <input class="btn-footer-input" type="email" name="user-email" id="user-email" placeholder="E-mail"
+              required>
+            <button type="submit" class="form-btn-footer form__label--touch-transform">Подписаться
+              <svg class="form__icon-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-airplane">
+                </use>
+              </svg>
+            </button>
           </div>
-      </form>
+        </form>
       </div>
     </div>
-    
+
   </footer>
   <!--Модальное окно-->
   <div data-modal class="backdrop backdrop--is-hidden">
