--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </svg>+38 096 111 11 11</a>
         </li>
       </ul>
-
       <button type="button" class="menu__open">
         <svg width="40px" height="40px" aria-label="Открытие мобильного меню">
           <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
         </svg>
       </button>
     </div>
+
     </div>
     <div class="container__mob">
       <div class="menu__container is-hidden">
@@ -66,10 +66,10 @@
         <nav>
           <ul class="mobile__menu list">
             <li class="mobile__menu__item">
-              <a href="./index.html" class="mobile__menu__link">Студия</a>
+              <a href="./index.html" class="mobile__menu__link mobile__menu__link--active  ">Студия</a>
             </li>
             <li class="mobile__menu__item">
-              <a href="./portfolio.html" class="mobile__menu__link mobile__menu__link--active">Портфолио</a>
+              <a href="./portfolio.html" class="mobile__menu__link ">Портфолио</a>
             </li>
             <li class="mobile__menu__item">
               <a href="" class="mobile__menu__link">Контакты</a>
@@ -210,15 +210,15 @@
         <h2 class="our-works__title ">Чем мы занимаемся</h2>
         <ul class="our-works__list our-works__list--proccess">
           <li class="our-works__list-item">
-            <img class="images" src="./images/img.jpg" alt="Человек работает на клавиатуре с планшетом" width="370" />
+            <img class="images" src="./images/box1.png" alt="Человек работает на клавиатуре с планшетом" width="370" />
             <p class="our-works__proccess-text">Декстопные приложения</p>
           </li>
           <li class="our-works__list-item">
-            <img class="images" src="./images/box2.jpg" alt="Человек работает с смартфоном и ноутбуком" width="370" />
+            <img class="images" src="./images/box2.png" alt="Человек работает с смартфоном и ноутбуком" width="370" />
             <p class="our-works__proccess-text">Мобильные приложения</p>
           </li>
           <li class="our-works__list-item">
-            <img class="images" src="./images/box3.jpg" alt="Человек рисует на графическом планшете" width="370" />
+            <img class="images" src="./images/box3.png" alt="Человек рисует на графическом планшете" width="370" />
             <p class="our-works__proccess-text">Дизайнерские решение</p>
           </li>
         </ul>
@@ -230,7 +230,21 @@
         <h2 class="team-list__title">Наша команда</h2>
         <ul class="team-list">
           <li class="team-list__item">
-            <img class="images" src="./images/product_designer.jpg" alt="Фото сотрудника команды" width="270" />
+            <picture>
+              <source srcset="
+                  ./images/img-our-team-desc-1-1px.jpg,
+                  ./images/img-our-team-desc-1-2px.jpg
+                " media="(min-width: 1200px)" />
+              <source srcset="
+                  ./images/img-our-team-tab-1-1px.jpg,
+                  ./images/img-our-team-tab-1-2px.jpg
+                " media="(min-width: 768px)" />
+              <source srcset="
+                  ./images/img-our-team-1-1px-min.jpg,
+                  ./images/img-our-team-1-2px-min.jpg
+                " media="(min-width: 480px)" />
+              <img src="./images/img3.jpg" alt="Фото Игоря" />
+            </picture>
             <div class="team-list__item-container">
               <h3 class="team-list__item-container-title">Игорь Демьяненко</h3>
               <p class="team-list__item-container-description">Product Designer</p>
@@ -267,7 +281,21 @@
             </ul>
           </li>
           <li class="team-list__item">
-            <img class="images" src="./images/frontend_developer.jpg" alt="Фото сотрудника команды" width="270" />
+            <picture>
+              <source srcset="
+                  ./images/img-our-team-desc-2-1px.jpg,
+                  ./images/img-our-team-desc-2-2px.jpg
+                " media="(min-width: 1200px)" />
+              <source srcset="
+                  ./images/img-our-team-tab-2-1px.jpg,
+                  ./images/img-our-team-tab-2-2px.jpg
+                " media="(min-width: 768px)" />
+              <source srcset="
+                  ./images/img-our-team-2-1px-min.jpg,
+                  ./images/img-our-team-2-2px-min.jpg
+                " media="(min-width: 480px)" />
+              <img src="./images/img2.jpg" alt="Фото Игоря" />
+            </picture>
             <div class="team-list__item-container">
               <h3 class="team-list__item-container-title">Ольга Репина</h3>
               <p class="team-list__item-container-description">Frontend Developer</p>
@@ -304,7 +332,21 @@
             </ul>
           </li>
           <li class="team-list__item">
-            <img class="images" src="./images/marketing.jpg" alt="Фото сотрудника команды" width="270" />
+            <picture>
+              <source srcset="
+                  ./images/img-our-team-desc-3-1px.jpg,
+                  ./images/img-our-team-desc-3-2px.jpg
+                " media="(min-width: 1200px)" />
+              <source srcset="
+                  ./images/img-our-team-tab-3-1px.jpg,
+                  ./images/img-our-team-tab-3-2px.jpg
+                " media="(min-width: 768px)" />
+              <source srcset="
+                  ./images/img-our-team-3-1px-min.jpg,
+                  ./images/img-our-team-3-2px-min.jpg
+                " media="(min-width: 480px)" />
+              <img src="./images/img1.jpg" alt="Фото Игоря" />
+            </picture>
             <div class="team-list__item-container">
               <h3 class="team-list__item-container-title">Николай Тарасов</h3>
               <p class="team-list__item-container-description">Marketing</p>
@@ -341,7 +383,21 @@
             </ul>
           </li>
           <li class="team-list__item">
-            <img class="images" src="./images/ui_designer.jpg" alt="Фото сотрудника команды" width="270" />
+            <picture>
+              <source srcset="
+                  ./images/img-our-team-desc-4-1px.jpg,
+                  ./images/img-our-team-desc-4-2px.jpg
+                " media="(min-width: 1200px)" />
+              <source srcset="
+                  ./images/img-our-team-tab-4-1px.jpg,
+                  ./images/img-our-team-tab-4-2px.jpg
+                " media="(min-width: 768px)" />
+              <source srcset="
+                  ./images/img-our-team-4-1px-min.jpg,
+                  ./images/img-our-team-4-2px-min.jpg
+                " media="(min-width: 480px)" />
+              <img src="./images/img.jpg" alt="Фото Игоря" />
+            </picture>
             <div class="team-list__item-container">
               <h3 class="team-list__item-container-title">Михаил Ермаков</h3>
               <p class="team-list__item-container-description">UI Designer</p>
@@ -384,42 +440,42 @@
       <div class="container">
         <h2 class="companies__title">Постоянные клиенты</h2>
         <ul class="companies">
-          <li>
+          <li class="companies__item">
             <a href="#" class="companies__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-group"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="companies__item">
             <a href="#" class="companies__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-2"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="companies__item">
             <a href="#" class="companies__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-1"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="companies__item">
             <a href="#" class="companies__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-group-3"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="companies__item">
             <a href="#" class="companies__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-group-4"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="companies__item">
             <a href="#" class="companies__icons">
               <svg class="companies-svg" width="106" height="60">
                 <use href="./images/icons.svg#icon-group-5"></use>
@@ -431,7 +487,7 @@
     </section>
   </main>
   <footer class="footer__section">
-    <div class="container">
+    <div class="container footer__container">
       <div class="footer__column">
         <address class="footer__address">
           <a href="" class="footer__logo footer__link"> <span class="footer__logo--color">Web</span>Studio</a>
@@ -479,6 +535,7 @@
             </li>
           </ul>
         </section>
+        <div class="footer__subscription"></div>
         <form action="#">
           <b class="title-b">Подпишитесь на
             рассылку</b>
@@ -495,6 +552,7 @@
           </div>
         </form>
       </div>
+    </div>
     </div>
 
   </footer>
